--- a/page.html
+++ b/page.html
@@ -32,7 +32,7 @@
 			</div>
 			<div id="json">
 				<h2>JSON 1</h2>
-				<textarea id='json1' class="jsondiv active" name="json1"></textarea>
+				<textarea id='json1' class="jsondiv" name="json1"></textarea>
 
 				<h2>JSON 2</h2>
 				<textarea id='json2' class="jsondiv" name="json2"></textarea>
